--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.2
+  hydrated_bloc: ^9.1.0
+  path_provider: ^2.0.13
 
 dev_dependencies:
 
